layout issue

--- a/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
+++ b/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
@@ -1629,7 +1629,6 @@ input:disabled.imixs-date {
 }
 
 .dashboard-admin-panel .imixs-admin-panel  li{
-    margin: 0.3em 0;
   font-size: 1.1em;
 } 
 
